feat: FolderService & FolderServiceTest